Neutral messaging style as quick fix for covering off all eventualities

--- a/public/layout/sass/_views.scss
+++ b/public/layout/sass/_views.scss
@@ -207,6 +207,11 @@
 		background: $fg-green-light;
 		color: $white;
 	}
+	
+	&.messaging-neutral {
+		background: $line;
+		color: $text
+	}
 }
 
 
